--- a/CodingIndia/requirements.txt
+++ b/CodingIndia/requirements.txt
@@ -7,7 +7,7 @@ django-js-asset==2.1.0
 django-taggit==4.0.0
 django-widget-tweaks==1.4.12
 idna==3.4
-mysqlclient==2.2.0
+# mysqlclient==2.2.0
 Pillow==10.0.0
 python-memcached==1.59
 requests==2.31.0
