--- a/CodingIndia/requirements.txt
+++ b/CodingIndia/requirements.txt
@@ -1,17 +1,50 @@
 asgiref==3.7.2
+asttokens==2.4.1
+beautifulsoup4==4.12.2
+cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
+decorator==5.1.1
 Django==4.2.4
 django-ckeditor==6.7.0
 django-js-asset==2.1.0
 django-taggit==4.0.0
 django-widget-tweaks==1.4.12
+exceptiongroup==1.2.0
+executing==2.0.1
+google==3.0.0
+google-ai-generativelanguage==0.4.0
+google-api-core==2.15.0
+google-auth==2.26.2
+google-generativeai==0.3.2
+googleapis-common-protos==1.62.0
+grpcio==1.60.0
+grpcio-status==1.60.0
 idna==3.4
-# mysqlclient==2.2.0
+ipython==8.20.0
+jedi==0.19.1
+matplotlib-inline==0.1.6
+mysqlclient==2.2.1
+parso==0.8.3
+pexpect==4.9.0
 Pillow==10.0.0
+prompt-toolkit==3.0.43
+proto-plus==1.23.0
+protobuf==4.25.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+Pygments==2.17.2
 python-memcached==1.59
 requests==2.31.0
+rsa==4.9
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
+stack-data==0.6.3
+tqdm==4.66.1
+traitlets==5.14.1
 typing_extensions==4.7.1
 urllib3==2.0.4
+wcwidth==0.2.13
